# libcfg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
include/: cfg.hpp  types.hpp
src/: cfg.cpp
tests/: CMakeLists.txt  cfg_test.cpp  cfg_test_basic.cpp  cfg_test_custom.cpp  test_config.yaml  test_config_basic.yaml  test_config_custom.yaml
